--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="content-panel">
                 <article class="content" id="teaching_content" style="display: none;">
                     <p>
-                        As an international student who survived the examination-oriented education system in China, I am an expert in small strategies in math, and effectively managing my time under stress. Leading by my philosophy of learning math, my students will learn how
+                        Survived the examination-oriented education system in China. I am an expert in small strategies in math, and effectively managing my time under stress. Leading by my philosophy of learning math, my students will learn how
                         to maximize the effort under their limited study time.</p>
                     <p>
                     </p>
@@ -207,8 +207,7 @@
                 </article>
                 <article class="content" id="mainpage_content" style="">
                     <p>
-                        I am a PHD student at University of Kentucky since 2016 Fall, under the supervising of Dr. <a href="http://www.ms.uky.edu/~guillou/" target="_blank">Bert Guillou</a>. I benefit from frequent conversations with Dr. <a href="http://www.ms.uky.edu/~njst237/"
-                            target="_blank">Nat Stapleton</a>. I am on the job market 2021 Fall.
+                        I am a post-doctoral researcher at University of California, Santa Cruz since 2022 Fal. I completed my PhD at University of Kentucky under the supervision of <a href="http://www.ms.uky.edu/~guillou/" target="_blank">Bert Guillou</a>.
                     </p>
                     <p> My research interest lies in equivariant and motivic stable homotopy theory.
                     </p>
