--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="./index_cur_files/css2" rel="stylesheet">
     <link href="./index_cur_files/css2(1)" rel="stylesheet">
     <link href="./index_cur_files/css2(2)" rel="stylesheet">
-    <title>Li, Ang | UKentucky</title>
+    <title>Li, Ang | UCSC</title>
 
 </head>
 
@@ -41,22 +41,25 @@
                         <dt class="border">2022 Spring</dt>
                         <dd>
                             <dl>
-                                <dt>MA 213 Calculus III</dt>
-                                <dd>Sec.007 and Sec.011</dd>
-                                <dd>Teaching Assistant</dd>
-                                <dt><a href="http://ms.uky.edu/~ali266/Syllabus/MA213Syl2022.pdf" target="_blank">Recitation Syllabus</a></dt>
+                                <dt>Math 239 Homological Algebra</dt>
+                                <dd>TR 11:40-13:15</dd>
+                                <dd>McHenry 1270</dd>
+                                <dt><a href="put syllabus" target="_blank">Syllabus</a></dt>
                                 <dt>Office hours</dt>
-                                <dd>Mondays 11:00am-12:00pm(Mathskeller)</dd> 
-                                <dd>Thursdays 10:00am-12:00pm(POT 722)</dd> 
+                                <dd>TBD</dd> 
+                                <dd>TBD</dd> 
                                 <dd>or by appointment</dd>
                             </dl>
                         </dd>
                     </dl>
                     <dl>
                         <dt class="border">Previously</dt>
-
+                        <dt class="border">At University of Kentucky</dt>
                         <dd>
                             <dl>
+                                <dt class="border">2022 Spring</dt><dt>MA 213 Calculus III</dt>
+                                <dd>Sec.007 and Sec.011</dd>
+                                <dd>Teaching Assistant</dd>
                                 <dt class="border">2021 Fall</dt><dt>MA 213 Calculus III</dt>
                                 <dd>Sec.005 and Sec.006</dd>
                                 <dd>Teaching Assistant</dd>
@@ -222,11 +225,11 @@
                             <dd>
                                 <dl>
                                     <dt>Office: </dt>
-                                    <dd>Patterson Office Tower 722</dd>
+                                    <dd>McHenry 4176</dd>
                                     <dt>Mailbox:</dt>
-                                    <dd>Patterson Office Tower 715 (less used under COVID 19)</dd>
+                                    <dd>Somewhere in McHenry, under construction</dd>
                                     <dt>Email:</dt>
-                                    <dd>ang.li1414201 at uky dot edu</dd>
+                                    <dd>ali169 at ucsc dot edu</dd>
                                 </dl>
 
                             </dd>
@@ -239,7 +242,6 @@
                     <p>
                     </p><dt class="border">Useful links</dt>
                     <ul style="list-style-type:circle">
-                        <li> <a href="http://www.ms.uky.edu/~topology/" target="_blank">UKY Topology Seminar</a> </li>
                         <li> <a href="https://s.wayne.edu/echt/" target="_blank">eCHT seminars and activities</a> </li>
                         <li> <a href="http://adrielle-stapleton-editing.com/" target="_blank">Editor Adrielle Stapleton</a> </li>
                     </ul>
