--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </article>
                 <article class="content" id="cv_content" style="display: none;">
                     <p>
-                    </p><dt class="border">Here is my <a href="http://ms.uky.edu/~ali266/CV_Jan2022.pdf" target="_blank">CV</a></dt>
+                    </p><dt class="border">Here is my <a href="https://angli266169.github.io/CV_Jan2022.pdf" target="_blank">CV</a></dt>
                     <dl>
                         <dt class="border">Experience and Activities</dt>
                         <dd>
