--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </article>
                 <article class="content" id="mainpage_content" style="">
                     <p>
-                        I am a post-doctoral researcher at University of California, Santa Cruz since 2022 Fal. I completed my PhD at University of Kentucky under the supervision of <a href="http://www.ms.uky.edu/~guillou/" target="_blank">Bert Guillou</a>.
+                        I am a post-doctoral researcher at University of California, Santa Cruz since 2022 Fall, working with <a href="https://people.ucsc.edu/~beren/" target="_blank">Beren Sanders</a>. I completed my PhD at University of Kentucky under the supervision of <a href="http://www.ms.uky.edu/~guillou/" target="_blank">Bert Guillou</a>.
                     </p>
                     <p> My research interest lies in equivariant and motivic stable homotopy theory.
                     </p>
