--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                                 <dt>Math 239 Homological Algebra</dt>
                                 <dd>TR 11:40-13:15</dd>
                                 <dd>McHenry 1270</dd>
-                                <dt><a href="put syllabus" target="_blank">Syllabus</a></dt>
+                                <dt><a href="https://angli266169.github.io/homologicalalgebrasyl" target="_blank">Syllabus</a></dt>
                                 <dt>Office hours</dt>
-                                <dd>TBD</dd> 
-                                <dd>TBD</dd> 
+                                <dd>Tuesdays 9:00-11:40</dd> 
                                 <dd>or by appointment</dd>
                             </dl>
                         </dd>
@@ -170,11 +169,11 @@
                         <dd>
                             <dl>
                                 <ul style="list-style-type:circle">
-                                    <li> <a href="http://ms.uky.edu/~ali266/1.5.pdf" target="_blank">Draft note</a> for evening section: Introduction to infinity category (IWoAT summer school 2019)</li>
-                                    <li> <a href="http://ms.uky.edu/~ali266/Lecture-8.pdf" target="_blank">Note</a> for my talk equivariant sphere, Freudenthal suspension theorem and the category of naive spectra (IWoAT summer school 2019)</li>
-                                    <li> <a href="http://ms.uky.edu/~ali266/girl_youve_got_a_battle_to_win.pdf" target="_blank">Slides</a> for my talk v_1-Periodic Region in Complex-motivic Ext (GSTGC 19 Spring UIUC and GROOTS 20 Summer)</li>
-                                    <li> A beginner's <a href="http://ms.uky.edu/~ali266/Note%20for%20infty%20cat.pdf" target="_blank">note</a> for infinity category (in process) </li>
-                                    <li> Trying to <a href="http://ms.uky.edu/~ali266/Htpy%20pullback%20in%20Gpd.pdf" target="_blank">understand formula</a> for homotopy pullback for 2-Groupoids (in process) </li>
+                                    <li> <a href="https://angli266169.github.io/1.5.pdf" target="_blank">Draft note</a> for evening section: Introduction to infinity category (IWoAT summer school 2019)</li>
+                                    <li> <a href="https://angli266169.github.io/Lecture-8.pdf" target="_blank">Note</a> for my talk equivariant sphere, Freudenthal suspension theorem and the category of naive spectra (IWoAT summer school 2019)</li>
+                                    <li> <a href="https://angli266169.github.io/girl_youve_got_a_battle_to_win.pdf" target="_blank">Slides</a> for my talk v_1-Periodic Region in Complex-motivic Ext (GSTGC 19 Spring UIUC and GROOTS 20 Summer)</li>
+                                    <li> A beginner's <a href="https://angli266169.github.io/Note%20for%20infty%20cat.pdf" target="_blank">note</a> for infinity category (in process) </li>
+                                    <li> Trying to <a href="https://angli266169.github.io/Htpy%20pullback%20in%20Gpd.pdf" target="_blank">understand formula</a> for homotopy pullback for 2-Groupoids (in process) </li>
                                 </ul>
                             </dl>
                         </dd>
