--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                     <p>
                     </p>
                     <dl>
-                        <dt class="border">2022 Spring</dt>
+                        <dt class="border">2023 Fall</dt>
                         <dd>
                             <dl>
-                                <dt>Math 239 Homological Algebra</dt>
-                                <dd>TR 11:40-13:15</dd>
-                                <dd>McHenry 1270</dd>
-                                <dt><a href="https://angli266169.github.io/Syllabus/homologicalalgebrasyl.pdf" target="_blank">Syllabus</a></dt>
+                                <dt>Math 124 Intro to Topology</dt>
+                                <dd>TBD</dd>
+                                <dd>TBD</dd>
+                                <dt><a href="https://angli266169.github.io/your syllabus" target="_blank">Syllabus</a></dt>
                                 <dt>Office hours</dt>
                                 <dd>Tuesdays 9:00-11:40</dd> 
                                 <dd>or by appointment</dd>
@@ -87,7 +87,7 @@
                 </article>
                 <article class="content" id="cv_content" style="display: none;">
                     <p>
-                    </p><dt class="border">Here is my <a href="https://angli266169.github.io/CV_Jan2022.pdf" target="_blank">CV</a></dt>
+                    </p><dt class="border">Here is my <a href="https://angli266169.github.io/CV_Aug2023.pdf" target="_blank">CV</a></dt>
                     <dl>
                         <dt class="border">Experience and Activities</dt>
                         <dd>
