--- a/index.html
+++ b/index.html
@@ -42,17 +42,29 @@
                         <dd>
                             <dl>
                                 <dt>Math 124 Intro to Topology</dt>
-                                <dd>TBD</dd>
-                                <dd>TBD</dd>
+                                <dd>Time:TBD</dd>
+                                <dd>Location:TBD</dd>
+                                <dt><a href="https://angli266169.github.io/your syllabus" target="_blank">Syllabus</a></dt>
+                                <dt>Math 287 Topics in Topology (Graduate)</dt>
+                                <dd>Time:TBD</dd>
+                                <dd>Location:TBD</dd>
                                 <dt><a href="https://angli266169.github.io/your syllabus" target="_blank">Syllabus</a></dt>
                                 <dt>Office hours</dt>
-                                <dd>Tuesdays 9:00-11:40</dd> 
+                                <dd>TBD</dd> 
                                 <dd>or by appointment</dd>
                             </dl>
                         </dd>
                     </dl>
                     <dl>
                         <dt class="border">Previously</dt>
+                        <dt class="border">At University of California, Santa Cruz</dt>
+                        <dd>
+                            <dl>
+                                <dt class="border">2022 Fall</dt><dt>Math 239 Homological algebra (Graduate)</dt>
+                                <dt class="border">2023 Winter</dt><dt>Math 23B Vector Calculus</dt><dt>Math 129 Algebraic Geometry</dt>
+                                <dt class="border">2023 Spring</dt><dt>Math 116 Combinatorics</dt>
+                            </dl>
+                        </dd>
                         <dt class="border">At University of Kentucky</dt>
                         <dd>
                             <dl>
@@ -96,6 +108,9 @@
                                 <dd>Co-organizer of the <a href="https://s.wayne.edu/echt/echt-reading-seminars/echt-kan-seminar-fall-2020/" target="_blank">eCHT Kan Seminar</a></dd>
                                 <dt>2020 Spring</dt>
                                 <dd>Organizer of the <a href="http://www.ms.uky.edu/~topology/STSemi/index.html" target="_blank">Student Topology learning Seminar in UKY</a></dd>
+                                <dt>2023 Fall-2024 Spring</dt>
+                                <dd>Organizer of the <a href="https://www.math.ucsc.edu/seminars/algebra/index.html" target="_blank">Algebra and Number Theory Seminar at UCSC</a></dd>
+
 
                             </dl>
                         </dd>
