--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
                                 <dt class="border">The stable Picard group of finite Adams Hopf algebroids with an application to the real motivic Steenrod subalgebra A(1)</dt>
                                 <dd>
                                     <dl>
-                                        <dt>Joint work with Xu Gao. Available on the <a href="https://arxiv.org/abs/2306.12527" target="_blank">ArXiv</a></dt>
+                                        <dt>Joint work with Xu Gao. 
+                                        </dt>
+                                        <dt>
+                                            Available on the <a href="https://arxiv.org/abs/2306.12527" target="_blank">ArXiv</a>
+                                        </dt>
                                     </dl>
                                 </dd>
                             </dl>
@@ -159,7 +163,9 @@
                                 <dt class="border">On realizations of the subalgebra A^\mathbb{R}(1) of the Real-motivic Steenrod Algebra</dt>
                                 <dd>
                                     <dl>
-                                        <dt>Joint work with Prasit Bhattacharya and Bertrand Guillou. Transactions of the American Mathematical Society, Series B 9.23 (2022): 700-732. Available on the <a href="https://arxiv.org/abs/2106.10769" target="_blank">ArXiv</a></dt>
+                                        <dt>Joint work with Prasit Bhattacharya and Bertrand Guillou. </dt>
+                                        <dt>Transactions of the American Mathematical Society, Series B 9.23 (2022): 700-732. </dt>
+                                        <dt>Available on the <a href="https://arxiv.org/abs/2106.10769" target="_blank">ArXiv</a></dt>
                                     </dl>
                                 </dd>
                             </dl>
@@ -169,7 +175,9 @@
                                 <dt class="border">A Real-motivic v_1-self-map of periodicity 1</dt>
                                 <dd>
                                     <dl>
-                                        <dt>Joint work with Prasit Bhattacharya and Bertrand Guillou. Homology, Homotopy & Applications 24.1 (2022). Available on the <a href="https://arxiv.org/abs/2008.05547" target="_blank">ArXiv</a></dt>
+                                        <dt>Joint work with Prasit Bhattacharya and Bertrand Guillou. </dt>
+                                        <dt>Homology, Homotopy & Applications 24.1 (2022). </dt>
+                                        <dt>Available on the <a href="https://arxiv.org/abs/2008.05547" target="_blank">ArXiv</a></dt>
                                     </dl>
                                 </dd>
                             </dl>
@@ -179,7 +187,8 @@
                                 <dt class="border">The v_1-Periodic Region in the cohomology of the complex motivic Steenrod algebra</dt>
                                 <dd>
                                     <dl>
-                                        <dt>New York J. Math. 26 (2020) 13551374. Available on the <a href="https://arxiv.org/abs/1912.03111" target="_blank">ArXiv</a></dt>
+                                        <dt>New York J. Math. 26 (2020) 13551374. </dt>
+                                        <dt>Available on the <a href="https://arxiv.org/abs/1912.03111" target="_blank">ArXiv</a></dt>
                                     </dl>
                                 </dd>
                             </dl>
@@ -187,7 +196,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <!
+                        <!--
                         <dt class="border">Talk Slides and Notes</dt>
                         <dd>
                             <dl>
@@ -200,7 +209,7 @@
                                 </ul>
                             </dl>
                         </dd>
-                        >
+                        -->
                     </dl>
                     <dl>
                         <dt class="border">Friends and Collaborators</dt>
