--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                             </dd>
                         </dl>
-                        <img id="headicon" src="./imgs/head_icon.jpg" class="headicon">
+                        <img id="headicon" src="./imgs/head_icon.png" class="headicon">
 
                     </div>
 
